# sigma-diff

./: .gitignore  .gitignore.bak  ARCHITECTURE.md  ARCHITECTURE.md.bak  ARCHITECTURE_ASSESSMENT_PHASE3.md  ARCHITECTURE_REVIEW_EXECUTIVE_SUMMARY.md  ARCHITECTURE_VISUAL_SUMMARY.md  BENCHMARK_DELIVERABLES_INDEX.md  BENCHMARK_DELIVERABLES_INDEX.md.bak  CHANGELOG.md  CHANGELOG.md.bak  CODE_REVIEW_PROCESS.md  COMMIT_SUCCESSFUL_SUMMARY.md  COMMUNICATION_GUIDELINES.md  COMMUNICATION_GUIDELINES.md.bak  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_PACKAGE_SUMMARY.md  COMPREHENSIVE_EXECUTIVE_SUMMARY_AND_ACTION_PLAN.md  COMPREHENSIVE_EXECUTIVE_SUMMARY_AND_ACTION_PLAN.md.bak  COMPREHENSIVE_PROJECT_REVIEW_JANUARY_2026.md  CONFIGURATION_GUIDE.md  COPILOT_EXECUTION_CHECKLIST.md  CRITICAL_ADRS_SPRINT1.md  DAYS_3_4_DELIVERY_SUMMARY.md  DECISION_LOG_TEMPLATE.md  DELIVERABLES_SUMMARY_JANUARY_2026.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md.bak  DEPLOYMENT_COMPLETE_STATUS.txt  DEPLOYMENT_EXECUTION_LOG.md  DEPLOYMENT_PACKAGE_INDEX.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEPLOYMENT_READY_SUMMARY.txt  DESKTOP_APP_DETAILED_GUIDE.md  DISTRIBUTED_ARCHITECTURE.md  DISTRIBUTED_ARCHITECTURE.md.bak  DISTRIBUTED_INFERENCE_GUIDE.md  DISTRIBUTED_SCALING_ANALYSIS_FINAL.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_COMPLETION_REPORT.md.bak  (+413 more)
RYZEN-LLM/src/api/bindings/: CMakeLists.txt  CMakeLists.txt.bak  bitnet_bindings.cpp  bitnet_bindings.cpp.bak
RYZEN-LLM/src/core/: CMakeLists.txt  __init__.py  __init__.py.bak  benchmarking.py  error_handling.py  monitoring.py  production_hardening.py  production_hardening.py.bak  quantization.py  quantization.py.bak  security.py  weight_loader.py
RYZEN-LLM/src/core/bitnet/: CMakeLists.txt  CMakeLists.txt.bak  bitnet_layer.cpp  bitnet_layer.cpp.bak  bitnet_layer.h  bitnet_layer.h.bak  bitnet_model.cpp  bitnet_model.cpp.bak  bitnet_model.h  bitnet_model.h.bak  engine.cpp  engine.cpp.bak  engine.h  engine.h.bak  optimization_utils.h  optimization_utils.h.bak  quantize.cpp  quantize.cpp.bak  quantize.h  quantize.h.bak
RYZEN-LLM/src/core/engine/: __init__.py  attention.py  distributed_inference.py  inference.py  kv_cache.py  rope.py  sampling.py
RYZEN-LLM/src/core/mamba/: CMakeLists.txt  scan.cpp  scan.cpp.bak  scan.h  scan.h.bak  ssm.cpp  ssm.cpp.bak  ssm.h  ssm.h.bak
RYZEN-LLM/src/core/model/: __init__.py  config.py  loader.py  quantization.py
RYZEN-LLM/src/core/rwkv/: CMakeLists.txt  CMakeLists.txt.bak  channel_mixing.cpp  channel_mixing.cpp.bak  channel_mixing.h  channel_mixing.h.bak  time_mixing.cpp  time_mixing.cpp.bak  time_mixing.h  time_mixing.h.bak  wkv.cpp  wkv.cpp.bak  wkv.h  wkv.h.bak
RYZEN-LLM/src/core/tmac/: CMakeLists.txt  CMakeLists.txt.bak  delta_encoder.cpp  delta_encoder.cpp.bak  delta_encoder.h  delta_encoder.h.bak  frequency_analyzer.cpp  frequency_analyzer.cpp.bak  frequency_analyzer.h  frequency_analyzer.h.bak  lut_gemm.cpp  lut_gemm.cpp.bak  lut_gemm.h  lut_gemm.h.bak  lut_lookup.cpp  lut_lookup.cpp.bak  lut_lookup.h  lut_lookup.h.bak  pattern_generator.cpp  pattern_generator.cpp.bak  pattern_generator.h  pattern_generator.h.bak  table_builder.cpp  table_builder.cpp.bak  table_builder.h  table_builder.h.bak  tmac_gemm.cpp  tmac_gemm.cpp.bak  tmac_gemm.h  tmac_gemm.h.bak  tmac_gemm_optimized.cpp  tmac_gemm_optimized.cpp.bak  tmac_gemm_optimized.h  tmac_gemm_optimized.h.bak
RYZEN-LLM/src/core/tokenizer/: __init__.py  base.py  bpe_tokenizer.py
RYZEN-LLM/src/io/: CMakeLists.txt  README_SAFETENSORS.md  README_SAFETENSORS.md.bak  safetensors_loader.cpp  safetensors_loader.cpp.bak  safetensors_loader.h  safetensors_loader.h.bak  weight_validator.cpp  weight_validator.cpp.bak  weight_validator.h  weight_validator.h.bak
RYZEN-LLM/src/optimization/: CMakeLists.txt  cache_manager.cpp  cache_manager.cpp.bak
RYZEN-LLM/src/optimization/avx512/: activation.cpp  activation.cpp.bak  matmul.cpp  matmul.cpp.bak  matmul.h  matmul.h.bak  vnni.cpp  vnni.cpp.bak
RYZEN-LLM/src/optimization/memory/: KV_CACHE_DESIGN.md  bitnet_kv_cache_example.cpp  bitnet_kv_cache_example.cpp.bak  kv_cache.cpp  kv_cache.cpp.bak  kv_cache.h  kv_cache.h.bak  kv_cache_benchmark.cpp  kv_cache_benchmark.cpp.bak  kv_cache_optimized.cpp  kv_cache_optimized.cpp.bak  kv_cache_optimized.h  kv_cache_optimized.h.bak  pool.cpp  pool.cpp.bak
RYZEN-LLM/src/optimization/speculative/: draft_model.cpp  draft_model.cpp.bak  draft_model.h  draft_model.h.bak  speculative_decoder.cpp  speculative_decoder.cpp.bak  speculative_decoder.h  verifier.cpp  (+4 more)
RYZEN-LLM/tests/: CMakeLists.txt  benchmark_gemm_performance.cpp  benchmark_gemm_performance.cpp.bak  test_distributed_api.py  test_distributed_orchestrator.py  test_e2e_generation.py  test_framework.h  test_kv_cache_optimized.cpp  test_kv_cache_optimized.cpp.bak  test_production_hardening.py  test_quantization_api.py  test_quantization_bindings.py  test_quantization_bindings.py.bak  test_safetensors_loader.cpp  test_safetensors_loader.cpp.bak  test_tokenizer.py  test_weight_loader.py
RYZEN-LLM/tests/distributed/: __init__.py  test_distributed_inference.py  test_distributed_inference.py.bak  test_model_loader.py  test_orchestrator.py  test_orchestrator.py.bak  test_tensor_parallel.py
RYZEN-LLM/tests/integration/: test_bitnet_generation.py  test_bitnet_generation.py.bak
RYZEN-LLM/tests/unit/: CMakeLists.txt  CMakeLists.txt.bak  TEST_SUITE_DOCUMENTATION.md  TEST_SUITE_DOCUMENTATION.md.bak  test_avx512_matmul.cpp  test_avx512_matmul.cpp.bak  test_bitnet_matmul.py  test_bitnet_matmul.py.bak  test_channel_mixing.cpp  test_channel_mixing.cpp.bak  test_channel_mixing_simple.cpp  test_channel_mixing_simple.cpp.bak  test_draft_model.cpp  test_draft_model.cpp.bak  test_kv_cache.cpp  test_kv_cache.cpp.bak  test_mamba.cpp  test_mamba.cpp.bak  test_minimal_cm.cpp  test_rwkv.cpp  test_rwkv.cpp.bak  test_rwkv_debug.cpp  test_rwkv_debug.cpp.bak  test_rwkv_minimal.cpp  test_rwkv_minimal.cpp.bak  test_rwkv_simple.cpp  test_rwkv_simple.cpp.bak  test_sampling_algorithms.cpp  test_tmac.cpp  test_tmac.cpp.bak  test_verifier.cpp  test_verifier.cpp.bak
(+675 files in other folders)
